Init de la branche 'Sequence 2' avant réalisation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,11 @@
-<p>Le component home fonctionne !</p>
+<h2>Liste des tâches</h2>
+@if (tasks$ | async; as tasks) {
+  <ul>
+    @for (t of tasks; track t.id) {
+      <li>{{t.title}}</li>
+    }
+  </ul>
+} @else {
+  <p>Tâche en cours...</p>
+}
+<p>Temps écoulé : {{count / 2}} secondes</p>
