--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
 <nav>
-  <a routerLink="/home" routerLinkActive="active">Home</a><br>
-  <a routerLink="/about" routerLinkActive="active">About</a>
+  <a routerLink="" routerLinkActive="active">Home</a><br>
+  <a routerLink="/about" routerLinkActive="active">About</a><br>
+  <a routerLink="/tasks" routerLinkActive="active">Tasks</a>
 </nav>
 
 <hr>
 
 <router-outlet></router-outlet>
 
+<footer>
+  <p>© 2024 TaskBoard Pro</p>
+</footer>
